docs(sitemap): add changefreq and priority

--- a/_posts/2025-06-18-v4.20.0.en.md
+++ b/_posts/2025-06-18-v4.20.0.en.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-0"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## Cross-tenant access and Multitenant Organizations
 The need for cross-tenant mailbox access—whether for a merger, acquisition, or complex organization—breaks most traditional signature solutions. Why? Because their architecture simply can't handle it. Set-OutlookSignatures solves this. Rleease v4.20.0 introduces full cross-tenant support that works seamlessly.
