--- a/_posts/2025-07-08-v4.20.2.de.md
+++ b/_posts/2025-07-08-v4.20.2.de.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-2"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## Aktualisierung der Behandlung des Zeichens '@' in Signaturnamen
 Microsoft erlaubt '@' nicht mehr in Roaming-Signaturnamen, da es für die interne Verwendung reserviert ist, und Microsoft Outlook wird bald folgen.
