--- a/_posts/2025-07-08-v4.20.2.en.md
+++ b/_posts/2025-07-08-v4.20.2.en.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-2"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## Update handling of the '@' character in signatures names
 Microsoft no longer allows '@' in roaming signature names as it is reserved for internal use, and Microsoft Outlook will follow soon.
