--- a/_posts/2025-08-15-v4.21.0.de.md
+++ b/_posts/2025-08-15-v4.21.0.de.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-21-0"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## Neue Funktionen für das Outlook-Add-In
 Neue LaunchEvents und benutzerdefinierter Code zur Auswahl von Signaturen:
