--- a/_posts/2025-09-05-v4.22.0.en.md
+++ b/_posts/2025-09-05-v4.22.0.en.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-22-0"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## More Outlook add-in customization
 The v4.22.0 release brings major changes and customization features to the Outlook add-in:
