--- a/_posts/2025-10-18-v4.23.0.de.md
+++ b/_posts/2025-10-18-v4.23.0.de.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-23-0"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## Adieu Formatierungs-Stress für Adressen und Telefonnummern, servus globale Standards
 Set-OutlookSignatures v4.23.0 ist da und liefert ein großes Update, das sich auf zwei gängige - und überraschend komplizierte – Stolpersteine in der globalen IT konzentriert: Die perfekte Formatierung von Telefonnummern und Postanschriften.
