--- a/_posts/2025-10-18-v4.23.0.en.md
+++ b/_posts/2025-10-18-v4.23.0.en.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-23-0"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## Goodbye formatting headaches with addresses and phone numbers, hello global standards
 Set-OutlookSignatures v4.23.0 is here, delivering a major upgrade focused on two common - and surprisingly complex - pain points in global IT: Perfectly formatting phone numbers and postal addresses.
