--- a/_posts/2025-06-18-v4.20.0.de.md
+++ b/_posts/2025-06-18-v4.20.0.de.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-0"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## Mandantenübergreifender Zugriff und mandantenfähige Organisationen
 Die Notwendigkeit eines mandantenübergreifenden Zugriffs auf Postfächer – sei es aufgrund einer Fusion, einer Übernahme oder einer komplexen Organisationsstruktur – stellt die meisten herkömmlichen Signaturlösungen vor Probleme. Warum? Weil ihre Architektur dafür einfach nicht ausgelegt ist. Set-OutlookSignatures löst dieses Problem. Die Version 4.20.0 bietet nun eine vollständige mandantenübergreifende Unterstützung, die nahtlos funktioniert.
