--- a/_posts/2025-07-17-v4.20.3.de.md
+++ b/_posts/2025-07-17-v4.20.3.de.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-3"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## Korrekturen für PowerShell-Eigenheiten und SimulateAndDeploy
 - Hinzufügen einer Problemumgehung für PowerShell 5.1, das Arrays bei der Übergabe über den InputObject-Parameter nicht korrekt in JSON konvertiert. (<a href="https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/issues/136" target="_blank">#136</a>)
