--- a/_posts/2025-08-15-v4.21.0.en.md
+++ b/_posts/2025-08-15-v4.21.0.en.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-21-0"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## New features for the Outlook add-in
 New launch events and custom code support:
