--- a/_posts/2025-09-05-v4.22.0.de.md
+++ b/_posts/2025-09-05-v4.22.0.de.md
@@ -9,6 +9,8 @@ author: Markus Gruber
 tags: ["new release"]
 slug: "v4-22-0"
 permalink: "/blog/:year/:month/:day/:slug/"
+sitemap_priority: 0.5
+sitemap_changefreq: monthly
 ---
 ## Weitere Anpassungsmöglichkeiten für das Outlook-Add-In
 Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das Outlook Add-In:
