--- a/404.en.md
+++ b/404.en.md
@@ -18,6 +18,8 @@ hero_darken: true
 page_id: "404"
 permalink: "/404.html"
 sitemap: false
+sitemap_priority: 0.3
+sitemap_changefreq: yearly
 ---
 <script>
   (function () {
