docs: remove curly quotes
docs(features): New intro text

--- a/_posts/2025-08-15-v4.21.0.de.md
+++ b/_posts/2025-08-15-v4.21.0.de.md
@@ -19,7 +19,7 @@ Neue LaunchEvents und benutzerdefinierter Code zur Auswahl von Signaturen:
   Sie können beispielsweise eine bestimmte Signatur festlegen…
     - …wenn es nur interne Empfänger gibt, oder eine andere Signatur, wenn es externe Empfänger gibt
     - …abhängig von der Absender-E-Mail-Adresse
-    - …wenn ein bestimmter Kunde im Feld „An“ steht
+    - …wenn ein bestimmter Kunde im Feld "An" steht
     - …wenn es sich bei dem aktuellen Element um eine E-Mail oder einen Termin handelt
     - …wenn es sich bei dem aktuellen Element um eine neue E-Mail handelt, oder eine andere Signatur, wenn es sich um eine Antwort oder eine Weiterleitung handelt
     - …abhängig vom Betreff
