--- a/_posts/2025-10-18-v4.23.0.de.md
+++ b/_posts/2025-10-18-v4.23.0.de.md
@@ -32,7 +32,7 @@ Neue Platzhalter-Variablen, wie '`$CurrentUserTelephone-International$`' und '`$
 Details zur Umsetzung finden Sie in unserer [FAQ zur Telefonnummern-Formatierung](https://set-outlooksignatures.com/faq/#4412-format-phone-numbers).
 
 ## Saubere Postadressen für jedes Land
-Genau wie Telefonnummern wirken auch Postanschriften kinderleicht – aber nur, wenn man rein national arbeitet. Aber: „Andere Länder, andere Sitten“. Lesen Sie den Artikel '[Falsehoods programmers believe about addresses](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses)', um das globale Chaos zu verstehen, das wir jetzt im Griff haben.
+Genau wie Telefonnummern wirken auch Postanschriften kinderleicht – aber nur, wenn man rein national arbeitet. Aber: "Andere Länder, andere Sitten". Lesen Sie den Artikel '[Falsehoods programmers believe about addresses](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses)', um das globale Chaos zu verstehen, das wir jetzt im Griff haben.
 
 Ein neues Address Formatter Modul, das auf der Arbeit der OpenCage GmbH beruht, stellt sicher, dass Adressen nach den länderspezifischen Regeln zusammengestellt werden.
 
