chore: convert from subfolders to html files

--- a/_posts/2025-10-18-v4.23.0.de.md
+++ b/_posts/2025-10-18-v4.23.0.de.md
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-23-0"
-permalink: "/blog/:year/:month/:day/:slug/"
+permalink: "/blog/:year/:month/:day/:slug"
 sitemap_priority: 0.5
 sitemap_changefreq: monthly
 ---
@@ -18,7 +18,7 @@ Set-OutlookSignatures v4.23.0 ist da und liefert ein großes Update, das sich au
 Dieses Release integriert Top-Open-Source-Bibliotheken, damit die Kontaktdaten in Ihrer Firma überall auf der Welt sauber, korrekt und professionell in jeder Signatur ausschauen.
 
 ## Perfekte Telefonnummern, ganz ohne Stress
-Wir glauben, Telefonnummern sind einfach, weil wir meinen, es sind eh nur Ziffern und vergessen dabei die ganze globale G'schicht. Wenn Sie das noch immer so sehen, wird der Artikel '[Falsehoods Programmers Believe About Phone Numbers](https://set-outlooksignatures.com/faq/#4412-format-phone-numbers)' Ihre Meinung ändern.
+Wir glauben, Telefonnummern sind einfach, weil wir meinen, es sind eh nur Ziffern und vergessen dabei die ganze globale G'schicht. Wenn Sie das noch immer so sehen, wird der Artikel '[Falsehoods Programmers Believe About Phone Numbers](https://set-outlooksignatures.com/faq#4412-format-phone-numbers)' Ihre Meinung ändern.
 
 Wir haben einen neuen Formatierer für Telefonnummern eingebaut, der auf Googles libphonenumber Bibliothek basiert.
 
@@ -29,16 +29,16 @@ Dieses Feature wandelt rohe Nummern (und optional einen Ländercode) in standard
 
 Neue Platzhalter-Variablen, wie '`$CurrentUserTelephone-International$`' und '`$CurrentMailboxManagerMobile-RFC3966$`', sind ab sofort verfügbar.
 
-Details zur Umsetzung finden Sie in unserer [FAQ zur Telefonnummern-Formatierung](https://set-outlooksignatures.com/faq/#4412-format-phone-numbers).
+Details zur Umsetzung finden Sie in unserer [FAQ zur Telefonnummern-Formatierung](https://set-outlooksignatures.com/faq#4412-format-phone-numbers).
 
 ## Saubere Postadressen für jedes Land
-Genau wie Telefonnummern wirken auch Postanschriften kinderleicht – aber nur, wenn man rein national arbeitet. Aber: "Andere Länder, andere Sitten". Lesen Sie den Artikel '[Falsehoods programmers believe about addresses](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses)', um das globale Chaos zu verstehen, das wir jetzt im Griff haben.
+Genau wie Telefonnummern wirken auch Postanschriften kinderleicht – aber nur, wenn man rein national arbeitet. Aber: "Andere Länder, andere Sitten". Lesen Sie den Artikel '[Falsehoods programmers believe about addresses](https://set-outlooksignatures.com/faq#4413-format-postal-addresses)', um das globale Chaos zu verstehen, das wir jetzt im Griff haben.
 
 Ein neues Address Formatter Modul, das auf der Arbeit der OpenCage GmbH beruht, stellt sicher, dass Adressen nach den länderspezifischen Regeln zusammengestellt werden.
 
 Sie geben die Adresskomponenten (über 20 stehen zur Verfügung) und den Ländercode ein, und es wird die korrekt formatierte Zeichenkette über die neuen Variablen '`$Current[User|UserManager|Mailbox|MailboxManager]PostalAddress$`' ausgegeben. Das ist ein Muss für jede multinationale Firma.
 
-Details zur Umsetzung finden Sie in unserem [FAQ zur Postadressen-Formatierung](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses).
+Details zur Umsetzung finden Sie in unserem [FAQ zur Postadressen-Formatierung](https://set-outlooksignatures.com/faq#4413-format-postal-addresses).
 
 ## Andere wichtige Verbesserungen
 - QR-Code-Update: Das Beispiel-QR-Code-Format wurde von MeCard auf das gängigere vCard-Format umgestellt.
