--- a/_posts/2025-10-18-v4.23.0.en.md
+++ b/_posts/2025-10-18-v4.23.0.en.md
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-23-0"
-permalink: "/blog/:year/:month/:day/:slug/"
+permalink: "/blog/:year/:month/:day/:slug"
 sitemap_priority: 0.5
 sitemap_changefreq: monthly
 ---
@@ -18,7 +18,7 @@ Set-OutlookSignatures v4.23.0 is here, delivering a major upgrade focused on two
 This release integrates world-class open-source libraries to ensure your organization's contact information is globally correct and consistently professional in every signature.
 
 ## Perfect phone numbers, effortlessly
-We think phone numbers are easy because we assume they are just numbers and forget about global complexity. If you still think so, reading the article '[Falsehoods Programmers Believe About Phone Numbers](https://set-outlooksignatures.com/faq/#4412-format-phone-numbers)' will change your mind.
+We think phone numbers are easy because we assume they are just numbers and forget about global complexity. If you still think so, reading the article '[Falsehoods Programmers Believe About Phone Numbers](https://set-outlooksignatures.com/faq#4412-format-phone-numbers)' will change your mind.
 
 We've added a new phone number formatter based on Google's libphonenumber library.
 
@@ -29,16 +29,16 @@ This feature converts raw numbers (and an optional country code) into standardiz
 
 New replacement variables, such as '`$CurrentUserTelephone-International$`' and '`$CurrentMailboxManagerMobile-RFC3966$`', are now available.
 
-For implementation details, see our [Format Phone Numbers FAQ](https://set-outlooksignatures.com/faq/#4412-format-phone-numbers).
+For implementation details, see our [Format Phone Numbers FAQ](https://set-outlooksignatures.com/faq#4412-format-phone-numbers).
 
 ## Accurate postal addresses for any country
-Just like phone numbers, postal addresses seem like child's play - if you're only working nationally. However, "Different countries, different customs". Read the article '[Falsehoods programmers believe about addresses](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses)' to understand the global chaos we've tamed.
+Just like phone numbers, postal addresses seem like child's play - if you're only working nationally. However, "Different countries, different customs". Read the article '[Falsehoods programmers believe about addresses](https://set-outlooksignatures.com/faq#4413-format-postal-addresses)' to understand the global chaos we've tamed.
 
 A new Address Formatter module, based on OpenCage GmbH's work, ensures addresses are assembled according to country-specific rules.
 
 Input named address components (over 20 available) and the country code to output the correctly formatted string via the new '`$Current[User|UserManager|Mailbox|MailboxManager]PostalAddress$`' variables. A necessity for multinational companies.
 
-For implementation details, see our [Format Postal Addresses FAQ](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses).
+For implementation details, see our [Format Postal Addresses FAQ](https://set-outlooksignatures.com/faq#4413-format-postal-addresses).
 
 ## Other key enhancements
 * QR Code Update: The sample QR code format has changed from MeCard to the more common vCard format.
