--- a/_posts/2025-06-26-v4.20.1.de.md
+++ b/_posts/2025-06-26-v4.20.1.de.md
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-1"
-permalink: "/blog/:year/:month/:day/:slug/"
+permalink: "/blog/:year/:month/:day/:slug"
 sitemap_priority: 0.5
 sitemap_changefreq: monthly
 ---
