--- a/_posts/2025-06-18-v4.20.0.de.md
+++ b/_posts/2025-06-18-v4.20.0.de.md
@@ -41,4 +41,4 @@ Set-OutlookSignatures wird jetzt mit UTF.Unknown für die Codierungserkennung ge
 Eine umfassende Liste aller Änderungen, Abhängigkeiten und Fehlerbehebungen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/contact/) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
