--- a/_posts/2025-06-18-v4.20.0.en.md
+++ b/_posts/2025-06-18-v4.20.0.en.md
@@ -41,4 +41,4 @@ Set-OutlookSignatures now comes bundled with UTF.Unknown for encoding detection.
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/contact/) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/contact) or explore further on our [website](). We look forward to connecting with you!
