--- a/_posts/2025-10-18-v4.23.0.de.md
+++ b/_posts/2025-10-18-v4.23.0.de.md
@@ -48,4 +48,4 @@ Details zur Umsetzung finden Sie in unserem [FAQ zur Postadressen-Formatierung](
 Eine komplette Liste aller Änderungen, Abhängigkeiten und Fehlerbehebungen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/contact/) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
