chore: update 404 logic to remove trailing slash

--- a/404.de.md
+++ b/404.de.md
@@ -25,10 +25,10 @@ sitemap_changefreq: yearly
   (function () {
     const currentURL = window.location.href;
     const lowerCaseURL = currentURL.toLowerCase();
+    const lowerCaseURLNoTrailingSlash = currentURL.toLowerCase();.replace(/\/$/, '')
 
-    // Step 1: Normalize to lowercase if needed
-    if (currentURL !== lowerCaseURL) {
-      location.replace(lowerCaseURL);
+    if (currentURL !== lowerCaseURLNoTrailingSlash) {
+      location.replace(lowerCaseURLNoTrailingSlash);
       return;
     }
   })();
