chore: update 404 logic to remove trailing slash

--- a/404.de.md
+++ b/404.de.md
@@ -25,7 +25,7 @@ sitemap_changefreq: yearly
   (function () {
     const currentURL = window.location.href;
     const lowerCaseURL = currentURL.toLowerCase();
-    const lowerCaseURLNoTrailingSlash = currentURL.toLowerCase();.replace(/\/$/, '')
+    const lowerCaseURLNoTrailingSlash = currentURL.toLowerCase().replace(/\/$/, '');
 
     if (currentURL !== lowerCaseURLNoTrailingSlash) {
       location.replace(lowerCaseURLNoTrailingSlash);
