posts: Update link in last sentence

--- a/_posts/2025-07-17-v4.20.3.de.md
+++ b/_posts/2025-07-17-v4.20.3.de.md
@@ -20,4 +20,4 @@ sitemap_changefreq: monthly
 Eine umfassende Liste aller Änderungen, Abhängigkeiten und Korrekturen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
