--- a/_posts/2025-08-12-v4.20.4.en.md
+++ b/_posts/2025-08-12-v4.20.4.en.md
@@ -19,4 +19,4 @@ sitemap_changefreq: monthly
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/contact) or explore further on our [website](). We look forward to connecting with you!
+[Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
