--- a/404.en.md
+++ b/404.en.md
@@ -16,7 +16,8 @@ hero_image: "/assets/images/broken bridge.jpg"
 hero_height: is-fullheight-with-navbar
 hero_darken: true
 page_id: "404"
-permalink: "/404.html"
+permalink: "/404"
+redirect_from: "/404/"
 sitemap: false
 sitemap_priority: 0.3
 sitemap_changefreq: yearly
