fix: improve URL handling in 404 error pages

--- a/404.de.md
+++ b/404.de.md
@@ -25,11 +25,14 @@ sitemap_changefreq: yearly
 <script>
   (function () {
     const currentURL = window.location.href;
-    const lowerCaseURL = currentURL.toLowerCase();
-    const lowerCaseURLNoTrailingSlash = currentURL.toLowerCase().replace(/\/$/, '');
+    let targetURL = currentURL;
 
-    if (currentURL !== lowerCaseURLNoTrailingSlash) {
-      location.replace(lowerCaseURLNoTrailingSlash);
+    targetURL = targetURL.toLowerCase();
+    targetURL = targetURL.replace(/\/$/, '');
+    targetURL = targetURL.replace(/\/#/g, '#');
+
+    if (currentURL !== targetURL) {
+      location.replace(targetURL);
       return;
     }
   })();
