--- a/404.de.md
+++ b/404.de.md
@@ -17,7 +17,8 @@ hero_height: is-fullheight-with-navbar
 hero_darken: true
 page_id: "404"
 permalink: "/404"
-redirect_from: "/404/"
+redirect_from:
+  - "/404/"
 sitemap: false
 sitemap_priority: 0.3
 sitemap_changefreq: yearly
