chore: Simplify navigation

--- a/_drafts/2026-02-11-privacy.de.md
+++ b/_drafts/2026-02-11-privacy.de.md
@@ -32,4 +32,4 @@ All dies erfordert Personal und eine Menge Hard- und Software. Da diese Struktur
 Als Kunde zahlen Sie für scheinbare Bequemlichkeit. Der Schein trügt, denn all diese Aufgaben können Sie schnell und einfach selbst erledigen – ohne einem weiteren Drittanbieter Zugriff auf interne Unternehmensdaten zu gewähren und diese sogar direkt an dessen Rechenzentren zu liefern.
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/support) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
