--- a/_drafts/2026-02-11-privacy.en.md
+++ b/_drafts/2026-02-11-privacy.en.md
@@ -32,4 +32,4 @@ All this requires manpower and a lot of hard- and software. Since these structur
 As a customer, you pay for apparent convenience. Appearances are deceiving, because all these tasks can be done quickly and easily yourself - without having to give another third-party manufacturer access to internal company data and even deliver it directly to their data centers.
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
