--- a/_drafts/2026-04-15-vbs.de.md
+++ b/_drafts/2026-04-15-vbs.de.md
@@ -26,4 +26,4 @@ Entdecken Sie Set-OutlookSignatures und das Add-on Benefactor Circle:
 Es ist an der Zeit, Ihr IT-Team zu entlasten, Ihre Marketingabteilung zu stärken und Ihren Benutzern ein nahtloses Erlebnis zu bieten.
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/support) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
