--- a/_drafts/2026-06-17-hot-tips.en.md
+++ b/_drafts/2026-06-17-hot-tips.en.md
@@ -23,4 +23,4 @@ Make your summer emails sizzle!
 - [How do I alternate banners and other images in signatures?](/faq#30-how-do-i-alternate-banners-and-other-images-in-signatures)
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
