--- a/_drafts/2025-11-25-v4.24.0.en.md
+++ b/_drafts/2025-11-25-v4.24.0.en.md
@@ -38,4 +38,4 @@ The Outlook add-in receives key enhancements for advanced deployments:
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
