--- a/_drafts/2026-04-15-vbs.en.md
+++ b/_drafts/2026-04-15-vbs.en.md
@@ -26,4 +26,4 @@ Enter Set-OutlookSignatures and the Benefactor Circle add-on:
 It's time to relieve your IT team, empower your Marketing department, and give your users a seamless experience.
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
