--- a/_drafts/2026-06-17-hot-tips.de.md
+++ b/_drafts/2026-06-17-hot-tips.de.md
@@ -23,4 +23,4 @@ Bringen Sie Ihre Sommer-E-Mails zum Strahlen!
 - [Wie kann ich Banner und andere Bilder in Signaturen abwechseln?](/faq#30-how-do-i-alternate-banners-and-other-images-in-signatures)
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/support) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
