--- a/_posts/2025-10-18-v4.23.0.en.md
+++ b/_posts/2025-10-18-v4.23.0.en.md
@@ -47,4 +47,4 @@ For implementation details, see our [Format Postal Addresses FAQ](/faq#4413-form
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
