docs(posts): Publish 2025-11-26-v4.24.0

--- a/_posts/2025-11-26-v4.24.0.de.md
+++ b/_posts/2025-11-26-v4.24.0.de.md
@@ -3,7 +3,7 @@ layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Version v4.24.0"
-description: "Easy account picture integration, launchevent control and more"
+description: "Einfacheres Hinzufügen von Benutzerfotos, Kontrolle über Launchevents und mehr"
 published: true
 tags: ["new release"]
 slug: "v4-24-0"
