docs: use LawnGreen instead of LimeGreen

--- a/404.en.md
+++ b/404.en.md
@@ -9,7 +9,7 @@ subtitle: |
   </p>
 
   <p class="subtitle is-4 has-text-white mt-2 mb-2">
-    <span style="background-color: rgba(0, 0, 0, 0.4);">If you think that there is an error on our end:</span> <a href="mailto:set-outlooksignatures@explicitconsulting.at" class="button is-link is-normal is-hovered has-text-black has-text-weight-bold" style="background-color: limegreen">Let us know</a>
+    <span style="background-color: rgba(0, 0, 0, 0.4);">If you think that there is an error on our end:</span> <a href="mailto:set-outlooksignatures@explicitconsulting.at" class="button is-link is-normal is-hovered has-text-black has-text-weight-bold" style="background-color: LawnGreen">Let us know</a>
   </p>
 description: "HTTP error 404. Site not found. Tut uns leid."
 hero_image: "/assets/images/broken bridge.jpg"
