rephrase: Outlook naming

--- a/_drafts/2025-12-22-v4.25.0.en.md
+++ b/_drafts/2025-12-22-v4.25.0.en.md
@@ -32,7 +32,7 @@ Set-OutlookSignatures now provides improved proactive warnings to identify poten
 
 ## Updates for Benefactor Circle add-on users
 The Benefactor Circle add-on and Outlook add-in receive several key enhancements for advanced deployments:
-- **Automatic Image Embedding:** Images are now embedded when setting Outlook Web signatures (classic and roaming) regardless of global parameters, ensuring high-quality display even for default signatures.
+- **Automatic Image Embedding:** Images are now embedded when setting Outlook on the web signatures (classic and roaming) regardless of global parameters, ensuring high-quality display even for default signatures.
 - **Improved Cleanup Logic:** The '`DeleteScriptCreatedSignaturesWithoutTemplate`' parameter is now more aggressive in removing "leftover" signatures when toggling roaming signature settings.
 - **Admin Tooling:** The Entra app creation script has been updated to force the use of the PowerShell Gallery and ensure all required package providers are present.
 
