--- a/_posts/2025-09-05-v4.22.0.de.md
+++ b/_posts/2025-09-05-v4.22.0.de.md
@@ -25,7 +25,7 @@ Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das
 - Es wurde die Möglichkeit hinzugefügt, eine benutzerdefinierte ID für das Add-In zu definieren, wodurch mehrere unabhängige Konfigurationen in derselben Umgebung möglich sind.
 
 ## Weitere Aktualisierungen
-- Es wurde eine Problemumgehung für das Problem in Outlook Web und New Outlook für Windows hinzugefügt, das dazu führte, dass mehrere Signaturen zu Terminen hinzugefügt wurden.
+- Es wurde eine Problemumgehung für das Problem in Outlook on the web und New Outlook für Windows hinzugefügt, das dazu führte, dass mehrere Signaturen zu Terminen hinzugefügt wurden.
 - Das Add-In muss nun zwingend die Graph-API für Exchange Online-Postfächer verwenden, um die Abkündigung von EWS vorzubereiten.
 - Die Ausgabevariable für benutzerdefinierte Regeln wurde von '`customRulesProperties`'
 
