--- a/_posts/2025-09-05-v4.22.0.en.md
+++ b/_posts/2025-09-05-v4.22.0.en.md
@@ -25,7 +25,7 @@ The v4.22.0 release brings major changes and customization features to the Outlo
 - Added the ability to define a custom ID for the add-in, enabling multiple independent configurations in the same environment.
 
 ## Further updates
-- Added a workaround for the issue in Outlook Web and New Outlook for Windows that resulted in multiple signatures being added to appointments.
+- Added a workaround for the issue in Outlook on the web and New Outlook on Windows that resulted in multiple signatures being added to appointments.
 - The add-in is now forced to use the Graph API for Exchange Online mailboxes to prepare for the deprecation of EWS.
 - Changed the custom rules output variable from '`customRulesPropertiesResult`' to the clearer '`customRulesResultSignatureName`'.
 - Fixed an issue to ensure custom rules properties '`itemIsNew`' and '`itemIsReplyForward`' report correctly across platforms.
