--- a/_posts/2025-11-26-v4.24.0.de.md
+++ b/_posts/2025-11-26-v4.24.0.de.md
@@ -32,7 +32,7 @@ Es wurden mehrere Updates durchgeführt, um eine robuste Leistung in verschieden
 ## Updates für Benutzer des Benefactor Circle Add-Ons
 Das Outlook-Add-in erhält wichtige Verbesserungen für erweiterte Bereitstellungen:
 - Detaillierte Steuerung von Startereignissen: Ein neuer Konfigurationsparameter, "LAUNCHEVENTS_HOSTS_AND_PLATFORMS", ermöglicht eine deutlich feinere Steuerung darüber, welche Startereignisse auf bestimmten Hosts und Plattformen aktiviert sind.
-- Neue Outlook/OWA-Problemumgehung: Es wurde eine wichtige Problemumgehung hinzugefügt, um ein Problem in New Outlook und Outlook Web zu beheben, bei dem die Signatur manchmal wiederholt hinzugefügt wurde, anstatt ersetzt zu werden, wenn die Empfänger geändert wurden.
+- Neue Outlook/OWA-Problemumgehung: Es wurde eine wichtige Problemumgehung hinzugefügt, um ein Problem in New Outlook und Outlook on the web zu beheben, bei dem die Signatur manchmal wiederholt hinzugefügt wurde, anstatt ersetzt zu werden, wenn die Empfänger geändert wurden.
 
 ## Vollständiges Changelog
 Eine komplette Liste aller Änderungen, Abhängigkeiten und Fehlerbehebungen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
