--- a/_posts/2025-11-26-v4.24.0.en.md
+++ b/_posts/2025-11-26-v4.24.0.en.md
@@ -32,7 +32,7 @@ Several updates were made to ensure robust performance across various environmen
 ## Updates for Benefactor Circle add-on users
 The Outlook add-in receives key enhancements for advanced deployments:
 - Granular launchevent control: A new configuration parameter, 'LAUNCHEVENTS_HOSTS_AND_PLATFORMS', provides significantly finer control over which launch events are enabled on specific hosts and platforms.
-- New Outlook/OWA workaround: A critical workaround has been added to address an issue in New Outlook and Outlook Web where the signature was sometimes added repeatedly instead of being replaced when recipients were changed.
+- New Outlook/OWA workaround: A critical workaround has been added to address an issue in New Outlook and Outlook on the web where the signature was sometimes added repeatedly instead of being replaced when recipients were changed.
 
 ## Detailed changelog
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
