docs(posts): Publish 2025-12-22-v4.25.0

--- a/_posts/2025-12-22-v4.25.0.de.md
+++ b/_posts/2025-12-22-v4.25.0.de.md
@@ -13,6 +13,8 @@ sitemap_changefreq: monthly
 ---
 _**Benutzer des Benefactor Circle Add-Ons mit Postfächern in Exchange Online sollten so bald wie möglich auf diese Version aktualisieren.**_ Microsoft wird in Kürze mit der Umstellung der HTML-Verarbeitung für Roaming-Signaturen beginnen. Führen Sie das Update so bald wie möglich durch, um mögliche negative Auswirkungen auf die Parameter '`DeleteScriptCreatedSignaturesWithoutTemplate`' und '`DeleteUserCreatedSignatures`' zu vermeiden.
 
+_**Der Austausch von Variablen in Word ist jetzt wesentlich schneller, aber Sie müssen Ihre DOCX-Vorlagen zunächst testen.**_ Sie müssen sicherstellen, dass jedes Zeichen einer Austauschvariable in der Vorlage identisch formatiert ist, da der Austausch sonst fehlschlägt. Ein Beispiel finden Sie im der vollständigen Changelog, das unten verlinkt ist.
+
 
 ## Optimiertes Signaturdesign mit kürzeren Variablen
 Das Entwerfen von Signaturen mit begrenztem Platz ist jetzt noch einfacher. Wir haben kürzere Ersatzvariablennamen eingeführt, die austauschbar mit den ursprünglichen langen Namen verwendet werden können. Dies gilt sowohl für Standard- als auch für benutzerdefinierte Variablen.
