--- a/_posts/2025-12-22-v4.25.0.en.md
+++ b/_posts/2025-12-22-v4.25.0.en.md
@@ -13,6 +13,8 @@ sitemap_changefreq: monthly
 ---
 _**Benefactor Circle add-on users with mailboxes in Exchange Online should update to this version as soon as possible.**_ Microsoft will begin changing roaming signature HTML processing shortly. Update as soon as possible to avoid potential negative impact on the parameters '`DeleteScriptCreatedSignaturesWithoutTemplate`' and '`DeleteUserCreatedSignatures`'.
 
+_**Variable replacement in Word is now much faster, but you must test your DOCX templates first.**_ You must make sure that every character of a replacement variable in the template is formatted identically, or the replacement will fail. An example is given in the full changelog linked below.
+
 
 ## Streamlined signature design with shorter variables
 Designing signatures with limited space just got easier. We have introduced shorter replacement variable names that can be used interchangeably with the original long names. This applies to both default and custom variables.
