fix(docs): standardize spelling of 'Benefactor Circle Add-on' across German documentation

--- a/_posts/2025-11-26-v4.24.0.de.md
+++ b/_posts/2025-11-26-v4.24.0.de.md
@@ -29,7 +29,7 @@ Es wurden mehrere Updates durchgeführt, um eine robuste Leistung in verschieden
 - Authentifizierungsfehlerbehebungen: Ein Update behebt Änderungen in der Windows-Ausgabe "dsregcmd /status" und stellt sicher, dass die integrierte Windows-Authentifizierung ohne Anmeldehinweis auch dann funktionsfähig bleibt, wenn mehrere Arbeitskonten hinzugefügt werden.
  Formatierung von Telefonnummern und Adressen: Die Länderkennungslogik für die Formatierung von Telefonnummern und Postanschriften verarbeitet nun Nullwerte und Leerzeichenzeichenfolgen korrekt und verhindert so Formatierungsfehler.
 
-## Updates für Benutzer des Benefactor Circle Add-Ons
+## Updates für Benutzer des Benefactor Circle Add-ons
 Das Outlook-Add-in erhält wichtige Verbesserungen für erweiterte Bereitstellungen:
 - Detaillierte Steuerung von Startereignissen: Ein neuer Konfigurationsparameter, "LAUNCHEVENTS_HOSTS_AND_PLATFORMS", ermöglicht eine deutlich feinere Steuerung darüber, welche Startereignisse auf bestimmten Hosts und Plattformen aktiviert sind.
 - Neue Outlook/OWA-Problemumgehung: Es wurde eine wichtige Problemumgehung hinzugefügt, um ein Problem in New Outlook und Outlook on the web zu beheben, bei dem die Signatur manchmal wiederholt hinzugefügt wurde, anstatt ersetzt zu werden, wenn die Empfänger geändert wurden.
