--- a/_posts/2025-12-22-v4.25.0.de.md
+++ b/_posts/2025-12-22-v4.25.0.de.md
@@ -11,7 +11,7 @@ permalink: "/blog/:year/:month/:day/:slug"
 sitemap_priority: 0.5
 sitemap_changefreq: monthly
 ---
-_**Benutzer des Benefactor Circle Add-Ons mit Postfächern in Exchange Online sollten so bald wie möglich auf diese Version aktualisieren.**_ Microsoft wird in Kürze mit der Umstellung der HTML-Verarbeitung für Roaming-Signaturen beginnen. Führen Sie das Update so bald wie möglich durch, um mögliche negative Auswirkungen auf die Parameter '`DeleteScriptCreatedSignaturesWithoutTemplate`' und '`DeleteUserCreatedSignatures`' zu vermeiden.
+_**Benutzer des Benefactor Circle Add-ons mit Postfächern in Exchange Online sollten so bald wie möglich auf diese Version aktualisieren.**_ Microsoft wird in Kürze mit der Umstellung der HTML-Verarbeitung für Roaming-Signaturen beginnen. Führen Sie das Update so bald wie möglich durch, um mögliche negative Auswirkungen auf die Parameter '`DeleteScriptCreatedSignaturesWithoutTemplate`' und '`DeleteUserCreatedSignatures`' zu vermeiden.
 
 
 ## Optimiertes Signaturdesign mit kürzeren Variablen
@@ -32,7 +32,7 @@ Set-OutlookSignatures bietet jetzt verbesserte proaktive Warnungen, um potenziel
 
 
 ## Updates für Benutzer des Benefactor Circle Add-ons
-Das Benefactor Circle Add-On und das Outlook Add-In wurden um mehrere wichtige Verbesserungen für erweiterte Bereitstellungen erweitert:
+Das Benefactor Circle Add-on und das Outlook Add-In wurden um mehrere wichtige Verbesserungen für erweiterte Bereitstellungen erweitert:
 
 - **Automatische Einbettung von Bildern:** Bilder werden nun beim Einrichten von Outlook-Websignaturen (klassisch und Roaming) unabhängig von globalen Parametern eingebettet, wodurch auch bei Standardsignaturen eine hochwertige Anzeige gewährleistet ist.
 - **Verbesserte Bereinigungslogik:** Der Parameter '`DeleteScriptCreatedSignaturesWithoutTemplate`' entfernt nun veraltete Signaturen beim Umschalten der Roaming-Signatureinstellungen noch konsequenter.
