--- a/_posts/2025-06-26-v4.20.1.en.md
+++ b/_posts/2025-06-26-v4.20.1.en.md
@@ -19,4 +19,4 @@ While '`DeleteScriptCreatedSignaturesWithoutTemplate`' did not delete obsolete s
 A comprehensive list of all changes, dependencies, and bug fixes can be found in the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to getting to know you!
