--- a/_posts/2025-08-15-v4.21.0.en.md
+++ b/_posts/2025-08-15-v4.21.0.en.md
@@ -29,4 +29,4 @@ See '`.\sample code\CustomRulesCode.js`' in the Outlook add-in folder for detail
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to getting to know you!
