--- a/_posts/2025-09-05-v4.22.0.de.md
+++ b/_posts/2025-09-05-v4.22.0.de.md
@@ -30,4 +30,4 @@ Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das
 - Die Ausgabevariable für benutzerdefinierte Regeln wurde von '`customRulesProperties`'
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/support) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/support) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, Sie kennenzulernen!
