--- a/_drafts/2026-02-18-privacy.de.md
+++ b/_drafts/2026-02-18-privacy.de.md
@@ -34,4 +34,4 @@ Als Kunde zahlen Sie für scheinbare Bequemlichkeit. Der Schein trügt, denn all
 
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/support) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/support) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, Sie kennenzulernen!
