--- a/_drafts/2026-02-18-privacy.en.md
+++ b/_drafts/2026-02-18-privacy.en.md
@@ -34,4 +34,4 @@ As a customer, you pay for apparent convenience. Appearances are deceiving, beca
 
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to getting to know you!
