--- a/_drafts/2026-04-15-vbs.en.md
+++ b/_drafts/2026-04-15-vbs.en.md
@@ -27,4 +27,4 @@ It's time to relieve your IT team, empower your Marketing department, and give y
 
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to getting to know you!
