--- a/_drafts/2026-06-17-hot-tips.de.md
+++ b/_drafts/2026-06-17-hot-tips.de.md
@@ -24,4 +24,4 @@ Bringen Sie Ihre Sommer-E-Mails zum Strahlen!
 
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/support) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/support) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, Sie kennenzulernen!
