--- a/_drafts/2026-06-17-hot-tips.en.md
+++ b/_drafts/2026-06-17-hot-tips.en.md
@@ -24,4 +24,4 @@ Make your summer emails sizzle!
 
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to getting to know you!
