--- a/_posts/2025-12-22-v4.25.0.en.md
+++ b/_posts/2025-12-22-v4.25.0.en.md
@@ -42,4 +42,4 @@ For a comprehensive list of all changes, dependencies, and fixes, please consult
 
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/support) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/support) or explore further on our [website](/). We look forward to getting to know you!
